# Multilevel-Pattern-Manager

./: .gitignore  Multilevel-Pattern-Manager.pro  README.md  resources.qrc
Doc/: .~lock.doc.odt#  doc.odt
Src/: Application.cpp  Application.h  CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
Src/Backend/: BackUtilsUtils.cpp  BackUtilsUtils.h  BackendLayer.cpp  BackendLayer.cpp.autosave  BackendLayer.h  NodeDataCreator.cpp  NodeDataCreator.h  PatternFactory.cpp  PatternFactory.h  ProjectContext.cpp  ProjectContext.h
Src/Backend/Model/: BinaryExpression.cpp  BinaryExpression.h  IExpression.hpp  LeafNode.cpp  LeafNode.hpp  SimpleExpression.cpp  SimpleExpression.hpp
Src/Backend/Processors/: PatternProcessor.cpp  PatternProcessor.hpp
Src/Common/: NodeUIData.h  PatternTree.cpp  PatternTree.h
Src/Model/: BinaryExpression.h  IExpression.hpp  LeafNode.cpp  LeafNode.hpp  Makefile  SimpleExpression.cpp  SimpleExpression.hpp  main.cpp  runthis
Src/Processors/: PatternProcessor.cpp  PatternProcessor.hpp
Src/Tests/: ITest.h  MinimizationTest.hpp  SplicingTest.hpp
Src/UI/: GraphicsView.cpp  GraphicsView.h  InspectorView.cpp  InspectorView.h  MainToolbar.cpp  MainToolbar.h  MainWindow.cpp  MainWindow.h  NewPatternDialog.cpp  NewPatternDialog.h  StringInputDialog.cpp  StringInputDialog.h  TreeView.cpp  TreeView.h  TreeWidgetItem.cpp  TreeWidgetItem.h  ViewWidget.cpp  ViewWidget.h
